# mall-surveillance-ai

./: README.md  config.py  main.py  pyproject.toml  surveillance.db  surveillance.db-shm  surveillance.db-wal
ai/: __init__.py  detector.py  embedder.py  feature_extractor.py  tracker.py
alerts/: __init__.py  engine.py
backend/: app.py  schemas.py
backend/routers/: alerts.py  analytics.py  cameras.py  events.py  health.py  search.py  tracks.py
database/: connection.py  models.py
database/repositories/: __init__.py  alert_repo.py  audit_repo.py  camera_repo.py  embedding_repo.py  event_repo.py  track_repo.py
event_engine/: __init__.py  constructor.py  rules.py  schemas.py
frontend/: app.py
frontend/pages/: page_active_alerts.py  page_analytics.py  page_camera_management.py  page_event_investigation.py  page_event_search.py  page_live_cameras.py  page_system_health.py  page_upload_video.py
reasoning/: __init__.py  engine.py  llm_client.py  prompts.py
storage/faiss/: events.index  events_meta.json
stream/: __init__.py  manager.py
tests/: conftest.py  test_alerts.py  test_api.py  test_database.py  test_detector.py  test_embedder.py  test_event_engine.py  test_feature_extractor.py  test_reasoning.py  test_tracker.py  test_vector_db.py
vector_db/: __init__.py  faiss_store.py
